# life_coach

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  test_llm_only.py  test_phase1.py  tsconfig.base.json  turbo.json
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.disabled.yml  codeql.yml
apps/mobile/: app.json  package.json  tsconfig.json
apps/mobile/app/: index.tsx
apps/web/: Dockerfile  middleware.ts  next.config.mjs  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/(app)/: layout.tsx
apps/web/app/(app)/coach/: page.tsx
apps/web/app/(app)/dashboard/: page.tsx
apps/web/app/(app)/onboarding/: page.tsx
docs/: DESIGN.md
infra/docker/: docker-compose.langfuse.yml  docker-compose.yml
infra/k8s/: README.md
infra/terraform/: README.md
services/api/: Dockerfile  alembic.ini  pyproject.toml
services/api/app/: main.py
services/api/app/api/v1/: router.py
services/api/app/api/v1/endpoints/: account.py  goals.py  memory.py  onboarding.py  profile.py  sessions.py
services/api/app/coaching/: methodology.py  orchestrator.py  tools.py
services/api/app/coaching/prompts/: system.md
services/api/app/core/: auth.py  config.py  logging.py  security.py  tracing.py
services/api/app/db/: base.py  session.py
services/api/app/db/models/: __init__.py  audit.py  coaching_session.py  conversation.py  embedding.py  goal.py  life_profile.py  memory.py  relationship.py  user.py
services/api/app/llm/: coach_llm.py  litellm_client.py  router.py
services/api/app/memory/: __init__.py  consolidation.py  extraction.py  ranking.py  retrieval.py  service.py
services/api/app/onboarding/: engine.py  parsing.py
services/api/app/safety/: classifier.py
services/api/app/schemas/: __init__.py  coaching.py  goal.py  memory.py  onboarding.py  profile.py
services/api/app/workers/: celery_app.py  tasks.py
services/api/migrations/: env.py
services/api/migrations/versions/: 0001_initial_schema.py
services/api/tests/: conftest.py  test_auth.py  test_health.py  test_llm.py  test_memory.py  test_migration.py  test_models.py  test_onboarding.py  test_orchestrator.py  test_safety.py
services/api/tests/eval/: test_safety_redteam.py
