[project]
name = "life-coach-api"
version = "0.1.0"
description = "AI Life Coach — FastAPI AI core (memory, coaching, onboarding, safety)."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.2.0",
    "pgvector>=0.3.0",
    "redis>=5.1.0",
    "celery>=5.4.0",
    "litellm>=1.50.0",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "langfuse>=2.50.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
